--- a/index.html
+++ b/index.html
@@ -1,16 +1,78 @@
 <html>
     <head>
         <title>Home</title>
-        <style>
-            h1 {
-                color: #42FD23;
-            }
-            .headline {
-                text-decoration: underline;
-            }
-        </style>
+        <!-- Latest compiled and minified BootStrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+        <!-- Latest compiled and minified BootStrap JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        
     </head>
     <body>
         <h1 class="headline other-class">Welcome to SF</h1>
+        <p>
+            This is an intoductory paragraph.
+        </p>
+        
+        <div class="container">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Type</th>
+                        <th>Notes</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <a href="https://www.duckduckgo.com">DuckDuckGo</a>
+                        </td>
+                        <td>
+                            Search Engine
+                        </td>
+                        <td>
+                            Search Engine
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="https://www.ecosia.org/">Ecosia</a>
+                        </td>
+                        <td>
+                            Search Engine
+                        </td>
+                        <td>
+                            Search Engine
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="https://www.hackthebox.eu/">Hack the Box</a>
+                        </td>
+                        <td>
+                            Online laboratory
+                        </td>
+                        <td>
+                            Search Engine
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="https://www.youtube.com/watch?v=eXFGeZZbMzQ">Intro to Python Scripting in Maya</a>
+                        </td>
+                        <td>
+                            Video Tutorial
+                        </td>
+                        <td>
+                            Search Engine
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+
+
     </body>
 </html>
